tests/fixtures/invalid/str_bitor_set.py
# Cannot bitwise OR Str and Set[int]
x: str = "hello" | {1, 2, 3}
